--- a/package.json
+++ b/package.json
@@ -22,26 +22,23 @@
     "@ionic-native/core": "^3.14.0",
     "@ionic-native/device": "^4.2.1",
     "@ionic-native/facebook": "^4.1.0",
-    "@ionic-native/firebase": "~4.12.2",
     "@ionic-native/google-plus": "^4.10.0",
     "@ionic-native/keyboard": "^4.1.0",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/angular-toolkit": "^1.5.1",
     "@ionic/storage": "2.0.1",
-    "angularfire2": "^5.2.1",
-    "cordova-android": "^6.3.0",
-    "cordova-ios": "5.0.1",
+    "cordova-android": "7.1.4",
+    "cordova-ios": "^5.0.1",
+    "cordova-plugin-androidx": "^1.0.2",
+    "cordova-plugin-androidx-adapter": "^1.1.0",
     "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-device": "^1.1.6",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.10.1",
-    "cordova-plugin-firebase": "~1.1.4",
-    "cordova-plugin-googleplus": "^5.3.2",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-whitelist": "^1.3.2",
-    "cordova-sqlite-storage": "^3.2.0",
-    "firebase": "^6.2.0",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sqlite-storage": "^3.4.0",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -49,7 +46,7 @@
     "lodash": "^4.17.15",
     "mobx": "^5.13.0",
     "mobx-angular": "^3.0.1",
-    "rxjs": "5.4.3",
+    "rxjs": "5.5.11",
     "rxjs-compat": "^6.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
@@ -70,18 +67,12 @@
       "ionic-plugin-keyboard": {},
       "cordova-plugin-splashscreen": {},
       "cordova-sqlite-storage": {},
-      "cordova-plugin-firebase": {},
-      "cordova-plugin-googleplus": {
-        "REVERSED_CLIENT_ID": "com.googleusercontent.apps.173824680226-pka6vomdacgnc67bgsqloc5bk7gaue60"
-      },
-      "cordova-plugin-facebook4": {
-        "APP_ID": "2242484839413866",
-        "APP_NAME": "Personal Secretary"
-      }
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   },
   "config": {
