--- a/package.json
+++ b/package.json
@@ -13,45 +13,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "^4.4.4",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
-    "@ionic-native/core": "^3.14.0",
-    "@ionic-native/device": "^4.2.1",
-    "@ionic-native/facebook": "^4.1.0",
-    "@ionic-native/google-plus": "^4.10.0",
-    "@ionic-native/keyboard": "^4.1.0",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
-    "@ionic/angular-toolkit": "^1.5.1",
-    "@ionic/storage": "2.0.1",
-    "cordova-android": "7.1.4",
+    "@angular/common": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/forms": "^7.2.2",
+    "@angular/http": "^7.2.2",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/router": "^7.2.2",
+    "@ionic-native/core": "^5.0.0",
+    "@ionic-native/fcm": "^5.8.0",
+    "@ionic-native/firebase": "^5.8.0",
+    "@ionic-native/splash-screen": "^5.0.0",
+    "@ionic-native/status-bar": "^5.0.0",
+    "@ionic/angular": "^4.1.0",
+    "cordova-android": "^8.1.0",
     "cordova-ios": "^5.0.1",
-    "cordova-plugin-androidx": "^1.0.2",
-    "cordova-plugin-androidx-adapter": "^1.1.0",
-    "cordova-plugin-console": "^1.1.0",
-    "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-facebook4": "^1.10.1",
-    "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-whitelist": "^1.3.4",
-    "cordova-sqlite-storage": "^3.4.0",
-    "ionic-angular": "3.8.0",
-    "ionic-plugin-keyboard": "^2.2.1",
-    "ionicons": "3.0.0",
-    "ios-sim": "^9.0.0-dev.4",
-    "lodash": "^4.17.15",
-    "mobx": "^5.13.0",
-    "mobx-angular": "^3.0.1",
-    "rxjs": "5.5.11",
-    "rxjs-compat": "^6.5.2",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-fcm-with-dependecy-updated": "^2.4.0",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.1.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "core-js": "^2.5.4",
+    "mobx": "^5.15.0",
+    "mobx-angular": "^3.0.3",
+    "rxjs": "~6.5.1",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.13.8",
